<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.justin.androidlabs.LoginActivity"
    tools:showIn="@layout/activity_login"
    >

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginemail"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="login name"
        android:inputType="textEmailAddress"

        />

    <TextView
        android:text="@string/PasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:text="@string/PasswordText"
        android:ems="10"
        android:id="@+id/editText2"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

</LinearLayout>
